--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,9 @@
 node_modules
 /.svelte-kit
 /build
-/functions
+/package
+.env
+.env.*
+!.env.example
+vite.config.js.timestamp-*
+vite.config.ts.timestamp-*
